  * Update lintian overrides.
  * Switch from kttsd to jovie in depends of kdeaccessibility and kmouth.
  * Provide a transitional kttsd package for migrating to jovie; they need to
    conflict as jovie has still few "kttsd" files.
  * Make jovie provide kttsd, as it provides also the kttsd D-Bus API.
  * Remove unused build dependencies:
    - libasound2-dev

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 04 Mar 2011 00:49:46 +0100

kdeaccessibility (4:4.4.5-4) unstable; urgency=low

  [ Modestas Vainius ]
  * Do not send invalid settings (module, language) to speech-dispatcher
    because this tends to cause a crash deep inside speech-dispatcher library.
    (Closes: #607326)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 19 Dec 2010 18:03:55 +0200

kdeaccessibility (4:4.4.5-3) unstable; urgency=low

  [ Modestas Vainius ]
  * Fix kttsd crash on startup when there is no configured talkers. Merge the
    fix to the kcmkttsd_permanent_settings_jobmgr_fixes.diff patch as it
    triggers this crash by using broken piece of upstream code.
    (Closes: #606166)
  * Fill list of available output modules in KTTS job manager even when default
    module is unknown (kcmkttsd_permanent_settings_jobmgr_fixes.diff updated).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 07 Dec 2010 01:23:34 +0200

kdeaccessibility (4:4.4.5-2) unstable; urgency=low

  * Point debian/control Vcs fields to the new Git repository.
  * Add a series of patches to fix kttsd configuration framework which is
    completely broken. kttsd 4.4.x release is as a bunch of code which is in
    the middle of porting to speech-dispatcher from the old infrastructure.
    While the basics in the KTTS daemon work, the daemon is not configurable
    and hence unusable on the desktop. This series of patches attempts to
    address this RC shortcoming in order to make kttsd shippable in Debian