@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Sune Vuorela <sune@debian.org>, Modestas Vainius <modax@debian.org>
 Build-Depends: kde-sc-dev-latest (>= 4:4.6.1),
- cdbs, cmake, debhelper (>= 7), pkg-kde-tools (>= 0.9),
+ cmake, debhelper (>= 7.2.7~), pkg-kde-tools (>= 0.11),
  kdelibs5-dev (>= 4:4.6), libxtst-dev, libxt-dev,
  libspeechd-dev
 Standards-Version: 3.8.4
