@@ -25,6 +25,9 @@ kdeaccessibility (4:4.6.1-0r1) UNRELEASED; urgency=low
   * Remove unused build dependencies:
     - libasound2-dev
 
+  [ Modestas Vainius ]
+  * Switch debian/rules engine to dhmk based qt-kde-team/2/*.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 04 Mar 2011 00:49:46 +0100
 
 kdeaccessibility (4:4.4.5-4) unstable; urgency=low
